--- a/terminals.html
+++ b/terminals.html
@@ -78,7 +78,7 @@
                   </a>
                 </li>
                 <li class="header__nav_item">
-                  <a href="#" class="header__nav_link body_small">
+                  <a href="software.html" class="header__nav_link body_small">
                     <span>Программное обеспечение</span>
                     <button class="header__nav_link_svg">
                       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
@@ -249,7 +249,7 @@
                     </button>
                     <div class="header__nav_scroll">
                       <div class="header__subnav">
-                        <a href="#" class="header__sublink body_caption">
+                        <a href="software.html" class="header__sublink body_caption">
                           <span>Программное обеспечение</span>
                           <div class="header__sublink_svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
