--- a/vacancies.html
+++ b/vacancies.html
@@ -78,7 +78,7 @@
                     </a>
                     </li>
                     <li class="header__nav_item">
-                    <a href="#" class="header__nav_link body_small">
+                    <a href="software.html" class="header__nav_link body_small">
                         <span>Программное обеспечение</span>
                         <button class="header__nav_link_svg">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
@@ -249,7 +249,7 @@
                         </button>
                         <div class="header__nav_scroll">
                         <div class="header__subnav">
-                            <a href="#" class="header__sublink body_caption">
+                            <a href="software.html" class="header__sublink body_caption">
                             <span>Программное обеспечение</span>
                             <div class="header__sublink_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
@@ -348,8 +348,8 @@
         </div>
         <div class="container hero__container">
           <div class="hero__block">
-              <div class="hero___swiper">
-                <div class="hero___wrapper swiper-wrapper">
+              <div class="hero__swiper">
+                <div class="hero__wrapper swiper-wrapper">
                   <div class="hero__flex swiper-slide">
                     <div class="hero__info">
                       <p class="hero__head">Вакансии</p>
@@ -406,7 +406,7 @@
                 <div class="terminals_icon__svg animate_top">
                   <img src="./img/icon/terminalCharacteristic/supermarket.svg" alt="supermarket" />                   
                 </div>
-                <p class="terminals_icon__subtitle animate_left sub_two">
+                <p class="terminals_icon__subtitle text_line animate_left sub_two">
                   Старт карьеры
                 </p>
                 <p class="terminals_icon__text animate_left body_small">
@@ -417,7 +417,7 @@
                 <div class="terminals_icon__svg animate_top">
                   <img src="./img/icon/terminalCharacteristic/delivery.svg" alt="delivery" />                                                                                    
                 </div>
-                <p class="terminals_icon__subtitle animate_left sub_two">
+                <p class="terminals_icon__subtitle text_line animate_left sub_two">
                   Новые возможности
                 </p>
                 <p class="terminals_icon__text animate_left body_small">
@@ -428,7 +428,7 @@
                 <div class="terminals_icon__svg animate_top">                                                                                    
                   <img src="./img/icon/terminalCharacteristic/PVZ.svg" alt="pvz" /> 
                 </div>
-                <p class="terminals_icon__subtitle animate_left sub_two">
+                <p class="terminals_icon__subtitle text_line animate_left sub_two">
                   Карьерный рост
                 </p>
                 <p class="terminals_icon__text animate_left body_small">
@@ -439,7 +439,7 @@
                 <div class="terminals_icon__svg animate_top">
                   <img src="./img/icon/terminalCharacteristic/food.svg" alt="food" />                  
                 </div>
-                <p class="terminals_icon__subtitle animate_left sub_two">
+                <p class="terminals_icon__subtitle text_line animate_left sub_two">
                   Стабильность
                 </p>
                 <p class="terminals_icon__text animate_left body_small">
@@ -466,23 +466,25 @@
           </div>
           <ul class="vacanc_info__wrapper">
             <li class="vacanc_info__item animate_left">
-              <div class="vacanc_info__item_top">
-                <h4 class="vacanc_info__item_name">Senior developer</h4>
-                <div class="vacanc_info__item_place">
-                  <div class="vacanc_info__item_city body_two">
-                    Москва
+              <a>
+                <div class="vacanc_info__item_top">
+                  <h4 class="vacanc_info__item_name">Senior developer</h4>
+                  <div class="vacanc_info__item_place">
+                    <div class="vacanc_info__item_city body_two">
+                      Москва
+                    </div>
+                    <div class="vacanc_info__item_experience body_two">
+                      от 1 года до 3 лет
+                    </div>
                   </div>
-                  <div class="vacanc_info__item_experience body_two">
-                    от 1 года до 3 лет
-                  </div>
+                  <div class="vacanc_info__item_icon">
+                      <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
+                        <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
+                        </svg>  
+                    </div>
                 </div>
-                <div class="vacanc_info__item_icon">
-                    <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                      <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
-                      <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
-                      </svg>  
-                  </div>
-              </div>
+              </a>
               <div class="vacanc_info__item_descr">
                 <div class="vacanc_info__item_text">
                   <p class="small">Мы ищем middle/senior fullstack разработчика, который имеет опыт работы в крупных проектах, знаком с микросервисной архитектурой, имеет опыт написания API (SOAP, REST, RPC). Кто не боится legacy и готов работать как с монолитом, так и новыми сервисами.</p>
@@ -523,23 +525,25 @@
               </div>
             </li>
             <li class="vacanc_info__item animate_left">
-              <div class="vacanc_info__item_top">
-                <h4 class="vacanc_info__item_name">Middle developer</h4>
-                <div class="vacanc_info__item_place">
-                  <div class="vacanc_info__item_city body_two">
-                    Москва
+              <a>
+                <div class="vacanc_info__item_top">
+                  <h4 class="vacanc_info__item_name">Middle developer</h4>
+                  <div class="vacanc_info__item_place">
+                    <div class="vacanc_info__item_city body_two">
+                      Москва
+                    </div>
+                    <div class="vacanc_info__item_experience body_two">
+                      от 1 года до 3 лет
+                    </div>
                   </div>
-                  <div class="vacanc_info__item_experience body_two">
-                    от 1 года до 3 лет
-                  </div>
+                  <div class="vacanc_info__item_icon">
+                      <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
+                        <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
+                        </svg>  
+                    </div>
                 </div>
-                <div class="vacanc_info__item_icon">
-                    <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                      <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
-                      <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
-                      </svg>  
-                  </div>
-              </div>
+              </a>
               <div class="vacanc_info__item_descr">
                 <div class="vacanc_info__item_text">
                   <p class="small">Мы ищем middle/senior fullstack разработчика, который имеет опыт работы в крупных проектах, знаком с микросервисной архитектурой, имеет опыт написания API (SOAP, REST, RPC). Кто не боится legacy и готов работать как с монолитом, так и новыми сервисами.</p>
@@ -580,23 +584,25 @@
               </div>
             </li>
             <li class="vacanc_info__item animate_left">
-              <div class="vacanc_info__item_top">
-                <h4 class="vacanc_info__item_name">Analyst</h4>
-                <div class="vacanc_info__item_place">
-                  <div class="vacanc_info__item_city body_two">
-                    Москва
+              <a>
+                <div class="vacanc_info__item_top">
+                  <h4 class="vacanc_info__item_name">Analyst</h4>
+                  <div class="vacanc_info__item_place">
+                    <div class="vacanc_info__item_city body_two">
+                      Москва
+                    </div>
+                    <div class="vacanc_info__item_experience body_two">
+                      от 1 года до 3 лет
+                    </div>
                   </div>
-                  <div class="vacanc_info__item_experience body_two">
-                    от 1 года до 3 лет
-                  </div>
+                  <div class="vacanc_info__item_icon">
+                      <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
+                        <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
+                        </svg>  
+                    </div>
                 </div>
-                <div class="vacanc_info__item_icon">
-                    <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                      <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
-                      <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
-                      </svg>  
-                  </div>
-              </div>
+              </a>
               <div class="vacanc_info__item_descr">
                 <div class="vacanc_info__item_text">
                   <p class="small">Мы ищем middle/senior fullstack разработчика, который имеет опыт работы в крупных проектах, знаком с микросервисной архитектурой, имеет опыт написания API (SOAP, REST, RPC). Кто не боится legacy и готов работать как с монолитом, так и новыми сервисами.</p>
@@ -637,23 +643,25 @@
               </div>
             </li>
             <li class="vacanc_info__item animate_left">
-              <div class="vacanc_info__item_top">
-                <h4 class="vacanc_info__item_name">QA</h4>
-                <div class="vacanc_info__item_place">
-                  <div class="vacanc_info__item_city body_two">
-                    Москва
+              <a>
+                <div class="vacanc_info__item_top">
+                  <h4 class="vacanc_info__item_name">QA</h4>
+                  <div class="vacanc_info__item_place">
+                    <div class="vacanc_info__item_city body_two">
+                      Москва
+                    </div>
+                    <div class="vacanc_info__item_experience body_two">
+                      от 1 года до 3 лет
+                    </div>
                   </div>
-                  <div class="vacanc_info__item_experience body_two">
-                    от 1 года до 3 лет
-                  </div>
+                  <div class="vacanc_info__item_icon">
+                      <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
+                        <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
+                        </svg>  
+                    </div>
                 </div>
-                <div class="vacanc_info__item_icon">
-                    <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                      <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
-                      <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
-                      </svg>  
-                  </div>
-              </div>
+              </a>
               <div class="vacanc_info__item_descr">
                 <div class="vacanc_info__item_text">
                   <p class="small">Мы ищем middle/senior fullstack разработчика, который имеет опыт работы в крупных проектах, знаком с микросервисной архитектурой, имеет опыт написания API (SOAP, REST, RPC). Кто не боится legacy и готов работать как с монолитом, так и новыми сервисами.</p>
@@ -694,23 +702,25 @@
               </div>
             </li>
             <li class="vacanc_info__item animate_left">
-              <div class="vacanc_info__item_top">
-                <h4 class="vacanc_info__item_name">Team leader</h4>
-                <div class="vacanc_info__item_place">
-                  <div class="vacanc_info__item_city body_two">
-                    Москва
+              <a>
+                <div class="vacanc_info__item_top">
+                  <h4 class="vacanc_info__item_name">Team leader</h4>
+                  <div class="vacanc_info__item_place">
+                    <div class="vacanc_info__item_city body_two">
+                      Москва
+                    </div>
+                    <div class="vacanc_info__item_experience body_two">
+                      от 1 года до 3 лет
+                    </div>
                   </div>
-                  <div class="vacanc_info__item_experience body_two">
-                    от 1 года до 3 лет
-                  </div>
+                  <div class="vacanc_info__item_icon">
+                      <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
+                        <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
+                        </svg>  
+                    </div>
                 </div>
-                <div class="vacanc_info__item_icon">
-                    <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                      <rect width="32" height="32" rx="16" fill="#FFF7F8"/>
-                      <path d="M19.8117 18.4268L16.4808 15.43L13.1426 18.4268L12.1172 17.5042L16.4808 13.5783L20.8445 17.5042L19.8117 18.4268Z" fill="#F94F63"/>
-                      </svg>  
-                  </div>
-              </div>
+              </a>
               <div class="vacanc_info__item_descr">
                 <div class="vacanc_info__item_text">
                   <p class="small">Мы ищем middle/senior fullstack разработчика, который имеет опыт работы в крупных проектах, знаком с микросервисной архитектурой, имеет опыт написания API (SOAP, REST, RPC). Кто не боится legacy и готов работать как с монолитом, так и новыми сервисами.</p>
@@ -874,7 +884,7 @@
                     <a href="terminals.html" class="footer__nav_link body_caption">Терминалы</a>
                   </li>
                   <li class="footer__nav_item">
-                    <a href="#" class="footer__nav_link body_caption">Программное обеспечение</a>
+                    <a href="software.html" class="footer__nav_link body_caption">Программное обеспечение</a>
                   </li>
                   <li class="footer__nav_item">
                     <a href="vacancies.html" class="footer__nav_link body_caption">Вакансии</a>
