--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   </a>
                 </li>
                 <li class="header__nav_item">
-                  <a href="#" class="header__nav_link body_small">
+                  <a href="software.html" class="header__nav_link body_small">
                     <span>Программное обеспечение</span>
                     <button class="header__nav_link_svg">
                       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
@@ -250,7 +250,7 @@
                     </button>
                     <div class="header__nav_scroll">
                       <div class="header__subnav">
-                        <a href="#" class="header__sublink body_caption">
+                        <a href="software.html" class="header__sublink body_caption">
                           <span>Программное обеспечение</span>
                           <div class="header__sublink_svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
@@ -1699,7 +1699,7 @@
                     <a href="terminals.html" class="footer__nav_link body_caption">Терминалы</a>
                   </li>
                   <li class="footer__nav_item animate_top">
-                    <a href="#" class="footer__nav_link body_caption">Программное обеспечение</a>
+                    <a href="software.html" class="footer__nav_link body_caption">Программное обеспечение</a>
                   </li>
                   <li class="footer__nav_item animate_top">
                     <a href="vacancies.html" class="footer__nav_link body_caption">Вакансии</a>
