--- a/terminals.html
+++ b/terminals.html
@@ -65,7 +65,7 @@
             <nav class="header__nav">
               <ul class="header__nav_list">
                 <li class="header__nav_item">
-                  <a href="#" class="header__nav_link body_small"><span>О нас</span></a>
+                  <a href="aboutus.html" class="header__nav_link body_small"><span>О нас</span></a>
                 </li>
                 <li class="header__nav_item">
                   <a href="terminals.html" class="header__nav_link body_small">
@@ -270,7 +270,7 @@
                     <div class="header__nav_scroll">
                       <div class="header__nav_scroll_flex">
                         <div class="header__subsubnav">
-                          <a href="#" class="header__subsublink body_caption">
+                          <a href="softwareCard.html" class="header__subsublink body_caption">
                             <span>Unitodi pay app</span>
                           </a>
                           <a href="#" class="header__subsublink body_caption">
@@ -321,7 +321,7 @@
   <main class="main" data-scroll-container>
     <div class="border"><span></span></div>
     <section class="top" data-scroll-section id="top"><div class="border"><span></span></div></section> 
-    <section class="hero" data-scroll-section>
+    <section class="hero hero__terminal" data-scroll-section>
       <div class="hero__back">
         <span class="hero__back_line"></span>
         <span class="hero__back_line"></span>
@@ -343,7 +343,7 @@
               <p class="hero__head animate_right">Принимайте все возможные <span class="text_color">способы оплаты</span></p>
               <div class="hero__button animate_left">
                 <a href="#" class="btn btn__primary hero__btn">
-                  <span>Узнать больше</span>
+                  <span>Оставить заявку</span>
                   <span class="btn__arrow">
                     <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
                       <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
@@ -353,21 +353,21 @@
               </div>
             </div>
             <div class="hero__image hero__image_circles">
-              <div class="hero__circles">
-                <button class="hero__circles_mouse active">
-                  <span class="hero__circle">P8 Bio</span>
+              <div class="hero__circles hero__circles_js">
+                <button class="hero__circles_mouse hero__circles_mouse_js active">
+                  <span class="hero__circle hero__circle_js">P8 Bio</span>
                 </button>
-                <button class="hero__circles_mouse">
-                  <span class="hero__circle">K 10</span>
+                <button class="hero__circles_mouse hero__circles_mouse_js">
+                  <span class="hero__circle hero__circle_js">K 10</span>
                 </button>
-                <button class="hero__circles_mouse">
-                  <span class="hero__circle">MF 960</span>
+                <button class="hero__circles_mouse hero__circles_mouse_js">
+                  <span class="hero__circle hero__circle_js">MF 960</span>
                 </button>
-                <button class="hero__circles_mouse">
-                  <span class="hero__circle">R 90</span>
+                <button class="hero__circles_mouse hero__circles_mouse_js">
+                  <span class="hero__circle hero__circle_js">R 90</span>
                 </button>
-                <button class="hero__circles_mouse">
-                  <span class="hero__circle">V 73</span>
+                <button class="hero__circles_mouse hero__circles_mouse_js">
+                  <span class="hero__circle hero__circle_js">V 73</span>
                 </button>
               </div>
               <div class="hero__image_slider">
@@ -894,7 +894,7 @@
               <div class="footer__navigation">
                 <ul class="footer__nav_list">
                   <li class="footer__nav_item animate_top">
-                    <a href="#" class="footer__nav_link body_caption">О нас</a>
+                    <a href="aboutus.html" class="footer__nav_link body_caption">О нас</a>
                   </li>
                   <li class="footer__nav_item animate_top">
                     <a href="terminals.html" class="footer__nav_link body_caption">Терминалы</a>
