--- a/vacancies.html
+++ b/vacancies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script>window.console = window.console || function(t) {};</script>
@@ -65,7 +66,7 @@
                 <nav class="header__nav">
                 <ul class="header__nav_list">
                     <li class="header__nav_item">
-                    <a href="#" class="header__nav_link body_small"><span>О нас</span></a>
+                    <a href="aboutus.html" class="header__nav_link body_small"><span>О нас</span></a>
                     </li>
                     <li class="header__nav_item">
                     <a href="terminals.html" class="header__nav_link body_small">
@@ -270,7 +271,7 @@
                         <div class="header__nav_scroll">
                         <div class="header__nav_scroll_flex">
                             <div class="header__subsubnav">
-                            <a href="#" class="header__subsublink body_caption">
+                            <a href="softwareCard.html" class="header__subsublink body_caption">
                                 <span>Unitodi pay app</span>
                             </a>
                             <a href="#" class="header__subsublink body_caption">
@@ -447,7 +448,7 @@
                 </p>
               </li>
             </ul>
-            <div class="vacancies__img">
+            <div class="vacancies__img animate_image">
               <img src="./img/vacancies/vacancies_main/vacancies_main_1.webp"/>
             </div>
           </div>
@@ -878,7 +879,7 @@
               <div class="footer__navigation">
                 <ul class="footer__nav_list">
                   <li class="footer__nav_item">
-                    <a href="#" class="footer__nav_link body_caption">О нас</a>
+                    <a href="aboutus.html" class="footer__nav_link body_caption">О нас</a>
                   </li>
                   <li class="footer__nav_item">
                     <a href="terminals.html" class="footer__nav_link body_caption">Терминалы</a>
