--- a/aboutus.html
+++ b/aboutus.html
@@ -399,18 +399,27 @@
           <div class="aboutus__lists">
             <div class="aboutus__flex">
               <div class="aboutus__left">
-                <div class="aboutus__svg">
-                  <img src="img/icon/aboutus/team.svg" alt="">
+                <div class="aboutus__info_top">
+                  <div class="aboutus__svg">
+                    <img src="img/icon/aboutus/team.svg" alt="">
+                  </div>
+                  <p class="aboutus__head text_line sub_two">Собственная команда разработки ПО</p>
+                  <p class="aboutus__desc body_small">
+                    Pretium elementum elementum dapibus mi tempus odio. 
+                    Eget sapien at turpis gravida placerat sed consequat 
+                    bibendum adipiscing. Nascetur ut consequat adipiscing 
+                    sed. At blandit in quis massa hac. Tempor proin 
+                    accumsan orci aliquet posuere urna. Pellentesque 
+                    aliquet dis tellus orci quis.
+                  </p>
                 </div>
-                <p class="aboutus__head text_line sub_two">Собственная команда разработки ПО</p>
-                <p class="aboutus__desc body_small">
-                  Pretium elementum elementum dapibus mi tempus odio. 
-                  Eget sapien at turpis gravida placerat sed consequat 
-                  bibendum adipiscing. Nascetur ut consequat adipiscing 
-                  sed. At blandit in quis massa hac. Tempor proin 
-                  accumsan orci aliquet posuere urna. Pellentesque 
-                  aliquet dis tellus orci quis.
-                </p>
+                <div class="aboutus__info_bottom">
+                  <div class="aboutus__tags">
+                    <p class="aboutus__tag body_small">36 человек в командах разработки</p>
+                    <p class="aboutus__tag body_small">Команда Linux, Web, Android и сопровождение</p>
+                    <p class="aboutus__tag body_small">В штате 10 разработчиков уровня Senior</p>
+                  </div>
+                </div>
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__one_block">
@@ -447,18 +456,27 @@
             </div>
             <div class="aboutus__flex">
               <div class="aboutus__left">
-                <div class="aboutus__svg">
-                  <img src="img/icon/aboutus/certificate.svg" alt="">
+                <div class="aboutus__info_top">
+                  <div class="aboutus__svg">
+                    <img src="img/icon/aboutus/certificate.svg" alt="">
+                  </div>
+                  <p class="aboutus__head text_line sub_two">Хостовые сертификации SmartVista, Compas+, OpenWay4,Tieto</p>
+                  <p class="aboutus__desc body_small">
+                    Pretium elementum elementum dapibus mi tempus odio. 
+                    Eget sapien at turpis gravida placerat sed consequat 
+                    bibendum adipiscing. Nascetur ut consequat adipiscing 
+                    sed. At blandit in quis massa hac. Tempor proin 
+                    accumsan orci aliquet posuere urna. Pellentesque 
+                    aliquet dis tellus orci quis.
+                  </p>
                 </div>
-                <p class="aboutus__head text_line sub_two">Хостовые сертификации SmartVista, Compas+, OpenWay4,Tieto</p>
-                <p class="aboutus__desc body_small">
-                  Pretium elementum elementum dapibus mi tempus odio. 
-                  Eget sapien at turpis gravida placerat sed consequat 
-                  bibendum adipiscing. Nascetur ut consequat adipiscing 
-                  sed. At blandit in quis massa hac. Tempor proin 
-                  accumsan orci aliquet posuere urna. Pellentesque 
-                  aliquet dis tellus orci quis.
-                </p>
+                <div class="aboutus__info_bottom">
+                  <div class="aboutus__tags">
+                    <p class="aboutus__tag body_small">At blandit in quis massa hac</p>
+                    <p class="aboutus__tag body_small">Tempor proin accumsan orci aliquet posuere urna</p>
+                    <p class="aboutus__tag body_small">Pellentesque aliquet dis tellus orci quis.</p>
+                  </div>
+                </div>
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__two_block">
@@ -489,18 +507,27 @@
             </div>
             <div class="aboutus__flex">
               <div class="aboutus__left">
-                <div class="aboutus__svg">
-                  <img src="img/icon/aboutus/pay.svg" alt="">
+                <div class="aboutus__info_top">
+                  <div class="aboutus__svg">
+                    <img src="img/icon/aboutus/pay.svg" alt="">
+                  </div>
+                  <p class="aboutus__head text_line sub_two">Платёжное приложение  для ОС Linux и Android</p>
+                  <p class="aboutus__desc body_small">
+                    Pretium elementum elementum dapibus mi tempus odio. 
+                    Eget sapien at turpis gravida placerat sed consequat 
+                    bibendum adipiscing. Nascetur ut consequat adipiscing 
+                    sed. At blandit in quis massa hac. Tempor proin 
+                    accumsan orci aliquet posuere urna. Pellentesque 
+                    aliquet dis tellus orci quis.
+                  </p>
                 </div>
-                <p class="aboutus__head text_line sub_two">Платёжное приложение  для ОС Linux и Android</p>
-                <p class="aboutus__desc body_small">
-                  Pretium elementum elementum dapibus mi tempus odio. 
-                  Eget sapien at turpis gravida placerat sed consequat 
-                  bibendum adipiscing. Nascetur ut consequat adipiscing 
-                  sed. At blandit in quis massa hac. Tempor proin 
-                  accumsan orci aliquet posuere urna. Pellentesque 
-                  aliquet dis tellus orci quis.
-                </p>
+                <div class="aboutus__info_bottom">
+                  <div class="aboutus__tags">
+                    <p class="aboutus__tag body_small">At blandit in quis massa hac</p>
+                    <p class="aboutus__tag body_small">Tempor proin accumsan orci aliquet posuere urna</p>
+                    <p class="aboutus__tag body_small">Pellentesque aliquet dis tellus orci quis.</p>
+                  </div>
+                </div>
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__three_block">
@@ -518,18 +545,27 @@
             </div>
             <div class="aboutus__flex">
               <div class="aboutus__left">
-                <div class="aboutus__svg">
-                  <img src="img/icon/aboutus/infrastructure.svg" alt="">
+                <div class="aboutus__info_top">
+                  <div class="aboutus__svg">
+                    <img src="img/icon/aboutus/infrastructure.svg" alt="">
+                  </div>
+                  <p class="aboutus__head text_line sub_two">Создание автоматизированных систем на базе микросервисной архитектуры и облачной кластерной инфраструктуры</p>
+                  <p class="aboutus__desc body_small">
+                    Pretium elementum elementum dapibus mi tempus odio. 
+                    Eget sapien at turpis gravida placerat sed consequat 
+                    bibendum adipiscing. Nascetur ut consequat adipiscing 
+                    sed. At blandit in quis massa hac. Tempor proin 
+                    accumsan orci aliquet posuere urna. Pellentesque 
+                    aliquet dis tellus orci quis.
+                  </p>
                 </div>
-                <p class="aboutus__head text_line sub_two">Создание автоматизированных систем на базе микросервисной архитектуры и облачной кластерной инфраструктуры</p>
-                <p class="aboutus__desc body_small">
-                  Pretium elementum elementum dapibus mi tempus odio. 
-                  Eget sapien at turpis gravida placerat sed consequat 
-                  bibendum adipiscing. Nascetur ut consequat adipiscing 
-                  sed. At blandit in quis massa hac. Tempor proin 
-                  accumsan orci aliquet posuere urna. Pellentesque 
-                  aliquet dis tellus orci quis.
-                </p>
+                <div class="aboutus__info_bottom">
+                  <div class="aboutus__tags">
+                    <p class="aboutus__tag body_small">At blandit in quis massa hac</p>
+                    <p class="aboutus__tag body_small">Tempor proin accumsan orci aliquet posuere urna</p>
+                    <p class="aboutus__tag body_small">Pellentesque aliquet dis tellus orci quis.</p>
+                  </div>
+                </div>
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__four_block">
@@ -563,18 +599,27 @@
             </div>
             <div class="aboutus__flex">
               <div class="aboutus__left">
-                <div class="aboutus__svg">
-                  <img src="img/icon/aboutus/team.svg" alt="">
+                <div class="aboutus__info_top">
+                  <div class="aboutus__svg">
+                    <img src="img/icon/aboutus/team.svg" alt="">
+                  </div>
+                  <p class="aboutus__head text_line sub_two">Опыт построения  интеграций в 1С, SAP  и пр. системами</p>
+                  <p class="aboutus__desc body_small">
+                    Pretium elementum elementum dapibus mi tempus odio. 
+                    Eget sapien at turpis gravida placerat sed consequat 
+                    bibendum adipiscing. Nascetur ut consequat adipiscing 
+                    sed. At blandit in quis massa hac. Tempor proin 
+                    accumsan orci aliquet posuere urna. Pellentesque 
+                    aliquet dis tellus orci quis.
+                  </p>
                 </div>
-                <p class="aboutus__head text_line sub_two">Опыт построения  интеграций в 1С, SAP  и пр. системами</p>
-                <p class="aboutus__desc body_small">
-                  Pretium elementum elementum dapibus mi tempus odio. 
-                  Eget sapien at turpis gravida placerat sed consequat 
-                  bibendum adipiscing. Nascetur ut consequat adipiscing 
-                  sed. At blandit in quis massa hac. Tempor proin 
-                  accumsan orci aliquet posuere urna. Pellentesque 
-                  aliquet dis tellus orci quis.
-                </p>
+                <div class="aboutus__info_bottom">
+                  <div class="aboutus__tags">
+                    <p class="aboutus__tag body_small">At blandit in quis massa hac</p>
+                    <p class="aboutus__tag body_small">Tempor proin accumsan orci aliquet posuere urna</p>
+                    <p class="aboutus__tag body_small">Pellentesque aliquet dis tellus orci quis.</p>
+                  </div>
+                </div>
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__five_block">
@@ -717,7 +762,7 @@
                   </p>
                 </li>
               </ul>
-              <div class="software_top__img">
+              <div class="software_top__img animate_image">
                 <img src="./img/aboutus/aboutus.webp"/>
               </div>
             </div>
@@ -933,7 +978,126 @@
         </button>
       </div>
     </div>
-    <section class="faq" data-scroll-section>
+    <section class="team" data-scroll-section>
+      <div class="container team__container">
+        <div class="border"><span></span></div>
+        <div class="team__block">
+          <div class="software_top">
+            <div class="software_top__title"> 
+              <div class="software_top__title_left">
+                <p class="animate_top sub_one text_color">Команда</p>
+                <h2 class="software_top__head animate_left">Tempus etiam feugiat pellentesque etiam</h2>
+              </div>
+              <div class="software_top__title_right">
+                <p class="animate_right body_two">
+                  Lorem ipsum dolor sit amet consectetur. Blandit cras lorem lectus vitae tincidunt amet. Id orci tincidunt ac quam diam pretium. Tempus etiam feugiat turpis leo tempus consectetur pellentesque etiam.
+                </p>
+              </div>
+            </div>
+          </div>
+          <ul class="team__list">
+            <li class="team__item animate_top">
+              <div class="team__image">
+                <img src="img/team/team_1.webp" alt="">
+              </div>
+              <div class="team__info">
+                <h4 class="team__head">Алексей Фадеев</h4>
+                <p class="team__desc">Co-founder</p>
+              </div>
+            </li>
+            <li class="team__item animate_top">
+              <div class="team__image">
+                <img src="img/team/team_2.webp" alt="">
+              </div>
+              <div class="team__info">
+                <h4 class="team__head">Максим Батраков</h4>
+                <p class="team__desc">Co-founder</p>
+              </div>
+            </li>
+            <li class="team__item animate_top">
+              <div class="team__image">
+                <img src="img/team/team_3.webp" alt="">
+              </div>
+              <div class="team__info">
+                <h4 class="team__head">Виктор Гуркин</h4>
+                <p class="team__desc">Co-founder</p>
+              </div>
+            </li>
+            <li class="team__item animate_top">
+              <div class="team__image">
+                <img src="img/team/team_4.webp" alt="">
+              </div>
+              <div class="team__info">
+                <h4 class="team__head">Александр Яроцкий</h4>
+                <p class="team__desc">Co-founder</p>
+              </div>
+            </li>
+            <li class="team__item animate_top">
+              <div class="team__image">
+                <img src="img/team/team_5.webp" alt="">
+              </div>
+              <div class="team__info">
+                <h4 class="team__head">Илья Галиуллин</h4>
+                <p class="team__desc">Co-founder</p>
+              </div>
+            </li>
+            <li class="team__item animate_top">
+              <div class="team__image">
+                <img src="img/team/team_6.webp" alt="">
+              </div>
+              <div class="team__info">
+                <h4 class="team__head">Андрей Рухлядев</h4>
+                <p class="team__desc">Co-founder</p>
+              </div>
+            </li>
+            <li class="team__item animate_top">
+              <div class="team__image">
+                <img src="img/team/team_7.webp" alt="">
+              </div>
+              <div class="team__info">
+                <h4 class="team__head">Вячеслав Спивак</h4>
+                <p class="team__desc">Co-founder</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="cooperation" data-scroll-section>
+      <div class="container cooperation__container">
+        <div class="cooperation__back">
+          <span class="cooperation__back_line"></span>
+          <span class="cooperation__back_line"></span>
+          <div class="border"><span></span></div>
+        </div>
+        <div class="cooperation__block">
+          <div class="cooperation__info">
+            <div class="cooperation__image_one animate_image">
+              <img src="img/cooperation/cooperation_1.webp" alt="">
+            </div>
+            <div class="cooperation__image_two animate_image">
+              <img src="img/cooperation/cooperation_2.webp" alt="">
+            </div>
+            <div class="cooperation__flex">
+              <p class="cooperation__name sub_one text_color animate_top">Сотрудничество</p>
+              <h2 class="cooperation__head animate_top">Хочешь работать в нашей компании? Мы ждём твоё резюме.</h2>
+              <p class="cooperation__desc body_two animate_top">Lorem ipsum dolor sit amet consectetur. Blandit cras lorem lectus vitae tincidunt amet. Id orci tincidunt ac quam diam pretium.</p>
+              <div class="cooperation__btn animate_top">
+                <a href="#faq" data-scroll-to class="btn btn__primary">
+                  <span>Оставить заявку</span>
+                  <span class="btn__arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                      <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                    </svg>
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="faq" id="faq" data-scroll-section>
       <div class="container faq__container">
         <div class="border"><span></span></div>
         <div class="faq__block">
