--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <a href="vacancies.html" class="header__nav_link body_small"><span>Вакансии</span></a>
                 </li>
                 <li class="header__nav_item">
-                  <a href="#" class="header__nav_link body_small"><span>Контакты</span></a>
+                  <a href="contacts.html" class="header__nav_link body_small"><span>Контакты</span></a>
                 </li>
               </ul>
             </nav>
@@ -301,21 +301,35 @@
             <div class="header__popup popup"></div>
           </div>
         </div>
-        <a href="tel://8800" class="btn btn__secondary header__btn">
-          <span>Связаться</span>
-          <span class="btn__arrow">
-            <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-              <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-            </svg>
-          </span>
-        </a>
-        <button class="header__burger" aria-label="Открыть меню">
-          <div class="header__burger_flex">
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="header__btn_wrapper">
+          <div class="header__language">
+            <a>
+              <span id="language" class="body_small">Ru</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+              </svg>
+            </a>
           </div>
-        </button>
+          <div class="header__language_wrapper">
+            <span class="body_small" id="RU">Русский</span>
+            <span class="body_small" id="EN">English</span>
+          </div>
+          <a href="tel://8800" class="btn btn__secondary header__btn">
+            <span>Связаться</span>
+            <span class="btn__arrow">
+              <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+              </svg>
+            </span>
+          </a>
+          <button class="header__burger" aria-label="Открыть меню">
+            <div class="header__burger_flex">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </button>
+        </div>
       </div>
     </div>
   </header>
@@ -1580,7 +1594,7 @@
         </div>
       </div>
     </section>
-    <section class="faq" data-scroll-section>
+    <section class="faq" id="faq" data-scroll-section>
       <div class="container faq__container">
         <div class="border"><span></span></div>
         <div class="faq__block">
@@ -1741,7 +1755,7 @@
                     <a href="vacancies.html" class="footer__nav_link body_caption">Вакансии</a>
                   </li>
                   <li class="footer__nav_item animate_top">
-                    <a href="#" class="footer__nav_link body_caption">Контакты</a>
+                    <a href="contacts.html" class="footer__nav_link body_caption">Контакты</a>
                   </li>
                 </ul>
               </div>
