--- a/policy.html
+++ b/policy.html
@@ -91,7 +91,7 @@
                   <a href="vacancies.html" class="header__nav_link body_small"><span>Вакансии</span></a>
                 </li>
                 <li class="header__nav_item">
-                  <a href="#" class="header__nav_link body_small"><span>Контакты</span></a>
+                  <a href="contacts.html" class="header__nav_link body_small"><span>Контакты</span></a>
                 </li>
               </ul>
             </nav>
@@ -549,7 +549,7 @@
                     <a href="vacancies.html" class="footer__nav_link body_caption">Вакансии</a>
                   </li>
                   <li class="footer__nav_item animate_top">
-                    <a href="#" class="footer__nav_link body_caption">Контакты</a>
+                    <a href="contacts.html" class="footer__nav_link body_caption">Контакты</a>
                   </li>
                 </ul>
               </div>
