--- a/terminalCard.html
+++ b/terminalCard.html
@@ -90,7 +90,7 @@
                   <a href="vacancies.html" class="header__nav_link body_small"><span>Вакансии</span></a>
                 </li>
                 <li class="header__nav_item">
-                  <a href="#" class="header__nav_link body_small"><span>Контакты</span></a>
+                  <a href="contacts.html" class="header__nav_link body_small"><span>Контакты</span></a>
                 </li>
               </ul>
             </nav>
@@ -684,7 +684,7 @@
         </div>
       </div>
     </section>
-    <section class="faq" data-scroll-section>
+    <section class="faq" id="faq" data-scroll-section>
       <div class="container faq__container">
         <div class="border"><span></span></div>
         <div class="faq__block">
@@ -811,7 +811,7 @@
                     <a href="vacancies.html" class="footer__nav_link body_caption">Вакансии</a>
                   </li>
                   <li class="footer__nav_item animate_top">
-                    <a href="#" class="footer__nav_link body_caption">Контакты</a>
+                    <a href="contacts.html" class="footer__nav_link body_caption">Контакты</a>
                   </li>
                 </ul>
               </div>
